# Practical-ML-by-WAI

./: .gitignore  README.md  train_tf.ipynb
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
1_python_syntax/: README.md  basic_syntax.ipynb  essentail_syntax.ipynb  interface.ipynb  oop.ipynb  simple_factory.ipynb  test.ipynb
2_env_setup/: README.md
2_env_setup/global_sys/: README.md
2_env_setup/my_conda/: README.md  test_gpu.ipynb
2_env_setup/my_pipenv/: Pipfile  README.md  requirements.txt  test_gpu.ipynb
2_env_setup/my_poetry/: README.md  my_script.py  pyproject.toml  test_lib.ipynb
2_env_setup/my_uv/: README.md  main.py  pyproject.toml
2_env_setup/my_venv/: README.md  requirements.txt  test_lib.ipynb
3_python_best_practices/: README.md
3_python_best_practices/TDD/: README.md  test_text_analyzer.py  text_analyzer.py
3_python_best_practices/disign/: README.md  adapter.ipynb  data.csv  observers.ipynb  simple_factory.ipynb  training_log.txt
4_image_processing_techniques/: Pipfile  basic_img_filtering.ipynb  basic_img_process.ipynb  basic_manipulation.ipynb  image_extraction.ipynb  img_segmentation.ipynb
4_image_processing_techniques/img_lab/: README.md  labelme2coco.py  labelme2voc.py  prepare_img.ipynb  read_parcal_voc.ipynb
5_deep_learning/: machine_check.ipynb
5_machine_learning/: Pipfile
5_machine_learning/Decision Tree/: 2. Decision_tree_framework.ipynb  README.md  X_test.csv  binary_tree.ipynb  (+5 more)
6_deep_learning/: Pipfile  README.md  test.py
tests/: assig5_test_marks.py  binary_classificationAutoGrading.sh
(+33 files in other folders)
